src/Language/ParserF.java
/* ParserF.java */
/* Generated By:JavaCC: Do not edit this line. ParserF.java */
/* 1. Package e importaciones */
package Language;
import Painter.WordPainter;
public class ParserF implements ParserFConstants {
/* 2. Configuraciones para el analisis (Operaciones y Declaraciones) */
    int nIB = 0;
    public static WordPainter painter;

  final public void parse() throws ParseException {
    INIT();
}

// INIT := INSTRUCTIONS EOF
  final public void INIT() throws ParseException {
    INSTSGLOBAL();
    jj_consume_token(0);
}

// INSTSGLOBAL ::= INSTGLOBAL*
  final public void INSTSGLOBAL() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case RW_main:
      case RW_void:
      case RW_String:
      case RW_boolean:
      case RW_char:
      case RW_int:
      case RW_double:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      try {
        INSTGLOBAL();
      } catch (ParseException e) {
Token t = e.currentToken;
            painter.SERROR(t.beginColumn, t.image.length());
            do {
                t = getNextToken();
            } while(t.kind != TK_semicolon && t.kind != TK_rbrc && t != null && t.kind != EOF);
      }
    }
}

/* INSTGLOBAL ::=
    CALLMAINFUNC |
    DECLID       |
    DECLFUNC     
*/
  final public void INSTGLOBAL() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RW_main:{
      CALLMAINFUNC();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_1(3)) {
        DECLID();
      } else if (jj_2_2(3)) {
        DECLFUNC();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

// CALLMAINFUNC ::= 'main' CALLFUNC ';'
  final public void CALLMAINFUNC() throws ParseException {Token mn;
    mn = jj_consume_token(RW_main);
painter.RW4(mn.beginColumn, mn.image.length());
    CALLFUNC();
    jj_consume_token(TK_semicolon);
}

// CALLFUNC ::= TK_id '(' LISTARGS ')'
  final public void CALLFUNC() throws ParseException {Token id;
    id = jj_consume_token(TK_id);
painter.USEFNC(id.beginColumn, id.image.length());
    COLORLPAR();
    LISTARGS();
    COLORRPAR();
}

// LISTARGS ::= (EXP (',' EXP)*)?
  final public void LISTARGS() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RW_true:
    case RW_false:
    case TK_char:
    case TK_string:
    case TK_int:
    case TK_double:
    case TK_id:
    case TK_minus:
    case TK_not:
    case TK_lpar:{
      EXP();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TK_comma:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(TK_comma);
        EXP();
      }
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
}

// DECLID ::= TYPE INITIDS ';'
  final public void DECLID() throws ParseException {
    TYPE();
    INITIDS();
    jj_consume_token(TK_semicolon);
}

// INITIDS ::= TK_id ('=' EXP)? (',' TK_id ('=' EXP)?)*
  final public void INITIDS() throws ParseException {Token id;
    id = jj_consume_token(TK_id);
painter.VARIABLE(id.beginColumn, id.image.length());
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TK_equ:{
      jj_consume_token(TK_equ);
      EXP();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_comma:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      jj_consume_token(TK_comma);
      id = jj_consume_token(TK_id);
painter.VARIABLE(id.beginColumn, id.image.length());
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_equ:{
        jj_consume_token(TK_equ);
        EXP();
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    }
}

/* DECLFUNC ::=
    TYPE   TK_id '(' LISTPARAMS ')' ENV |
    'void' TK_id '(' LISTPARAMS ')' ENV
*/
  final public void DECLFUNC() throws ParseException {Token i;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RW_String:
    case RW_boolean:
    case RW_char:
    case RW_int:
    case RW_double:{
      TYPE();
      i = jj_consume_token(TK_id);
painter.FNC(i.beginColumn, i.image.length());
      COLORLPAR();
      LISTPARAMS();
      COLORRPAR();
      ENV();
      break;
      }
    case RW_void:{
      i = jj_consume_token(RW_void);
painter.RW1(i.beginColumn, i.image.length());
      i = jj_consume_token(TK_id);
painter.FNC(i.beginColumn, i.image.length());
      COLORLPAR();
      LISTPARAMS();
      COLORRPAR();
      ENV();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// LISTPARAMS ::= (TYPE TK_id (',' TYPE TK_id)*)?
  final public void LISTPARAMS() throws ParseException {Token id;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RW_String:
    case RW_boolean:
    case RW_char:
    case RW_int:
    case RW_double:{
      TYPE();
      id = jj_consume_token(TK_id);
painter.VARIABLE(id.beginColumn, id.image.length());
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TK_comma:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_4;
        }
        jj_consume_token(TK_comma);
        TYPE();
        id = jj_consume_token(TK_id);
painter.VARIABLE(id.beginColumn, id.image.length());
      }
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
}

// IFSTRUCT ::= 'if' '(' EXP ')' ENV ('else' (IFSTRUCT | ENV))?
  final public void IFSTRUCT() throws ParseException {Token i;
    i = jj_consume_token(RW_if);
painter.RW2(i.beginColumn, i.image.length());
    COLORLPAR();
    EXP();
    COLORRPAR();
    ENV();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RW_else:{
      i = jj_consume_token(RW_else);
painter.RW2(i.beginColumn, i.image.length());
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case RW_if:{
        IFSTRUCT();
        break;
        }
      case TK_lbrc:{
        ENV();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
}

// SWITCHSTRUCT ::= 'switch' '(' EXP ')' ENVS
  final public void SWITCHSTRUCT() throws ParseException {Token sw;
    sw = jj_consume_token(RW_switch);
painter.RW2(sw.beginColumn, sw.image.length());
    COLORLPAR();
    EXP();
    COLORRPAR();
    ENVS();
}

// ENVS ::= '{' CASESDEFAULT '}'
  final public void ENVS() throws ParseException {
    COLORLBRC();
    CASESDEFAULT();
    COLORRBRC();
}

// CASESDEFAULT ::= (CASES)? (DEFAULT)?
  final public void CASESDEFAULT() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RW_case:{
      CASES();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RW_default:{
      DEFAULT();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
}

// CASES ::= (CASE)+
  final public void CASES() throws ParseException {
    label_5:
    while (true) {
      CASE();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case RW_case:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_5;
      }
    }
}

// CASE ::= 'case' EXP ':' (ENV | INSTRUCTIONS)
  final public void CASE() throws ParseException {Token c;
    c = jj_consume_token(RW_case);
painter.RW2(c.beginColumn, c.image.length());
    EXP();
    c = jj_consume_token(TK_colon);
painter.SYMBS1(c.beginColumn, c.image.length());
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TK_lbrc:{
      ENV();
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      INSTRUCTIONS();
    }
}

// DEFAULT ::= 'default' ':' (ENV | INSTRUCTIONS)
  final public void DEFAULT() throws ParseException {Token d;
    d = jj_consume_token(RW_default);
painter.RW2(d.beginColumn, d.image.length());
    d = jj_consume_token(TK_colon);
painter.SYMBS1(d.beginColumn, d.image.length());
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TK_lbrc:{
      ENV();
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      INSTRUCTIONS();
    }
}

// LOOPFOR ::= 'for' '(' ARGSFOR ')' ENV
  final public void LOOPFOR() throws ParseException {Token f;
    f = jj_consume_token(RW_for);
painter.RW2(f.beginColumn, f.image.length());
    COLORLPAR();
    ARGSFOR();
    COLORRPAR();
    ENV();
}

// ARGSFOR ::= (UPDATESFOR)? ';' (EXP)? ';' (UPDATESFOR)?
  final public void ARGSFOR() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RW_String:
    case RW_boolean:
    case RW_char:
    case RW_int:
    case RW_double:
    case TK_id:{
      INITIALIZEFOR();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(TK_semicolon);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RW_true:
    case RW_false:
    case TK_char:
    case TK_string:
    case TK_int:
    case TK_double:
    case TK_id:
    case TK_minus:
    case TK_not:
    case TK_lpar:{
      EXP();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    jj_consume_token(TK_semicolon);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TK_id:{
      UPDATESFOR();
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      ;
    }
}

/* INITIALIZEFOR ::=
    TYPE INITIDSFOR |
    REASIGNS        
*/
  final public void INITIALIZEFOR() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RW_String:
    case RW_boolean:
    case RW_char:
    case RW_int:
    case RW_double:{
      TYPE();
      REASIGNS();
      break;
      }
    case TK_id:{
      REASIGNS();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// REASIGNS ::= REASIGN (',' REASIGN)*
  final public void REASIGNS() throws ParseException {
    REASIGN();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_comma:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_6;
      }
      jj_consume_token(TK_comma);
      REASIGN();
    }
}

// UPDATESFOR ::= UPDATEFOR (',' UPDATEFOR)*
  final public void UPDATESFOR() throws ParseException {
    UPDATEFOR();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_comma:{
        ;
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        break label_7;
      }
      jj_consume_token(TK_comma);
      UPDATEFOR();
    }
}

/* UPDATEFOR ::=
    INCDEC  |
    REASIGN |
    ADDSUB  
*/
  final public void UPDATEFOR() throws ParseException {
    if (jj_2_3(2)) {
      INCDEC();
    } else if (jj_2_4(2)) {
      REASIGN();
    } else if (jj_2_5(2)) {
      ADDSUB();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// LOOPWHILE ::= 'while' '(' EXP ')' ENV
  final public void LOOPWHILE() throws ParseException {Token w;
    w = jj_consume_token(RW_while);
painter.RW2(w.beginColumn, w.image.length());
    COLORLPAR();
    EXP();
    COLORRPAR();
    ENV();
}

// LOOPDOWHILE ::= 'do' ENV 'while' '(' EXP ')' ';'
  final public void LOOPDOWHILE() throws ParseException {Token w;
    w = jj_consume_token(RW_do);
painter.RW2(w.beginColumn, w.image.length());
    ENV();
    w = jj_consume_token(RW_while);
painter.RW2(w.beginColumn, w.image.length());
    COLORLPAR();
    EXP();
    COLORRPAR();
    jj_consume_token(TK_semicolon);
}

// REASIGN ::= TK_id '=' EXP
  final public void REASIGN() throws ParseException {Token id;
    id = jj_consume_token(TK_id);
painter.USEVARIABLE(id.beginColumn, id.image.length());
    jj_consume_token(TK_equ);
    EXP();
}

// INCDEC ::= TK_id ('++' | '--')
  final public void INCDEC() throws ParseException {Token id;
    id = jj_consume_token(TK_id);
painter.USEVARIABLE(id.beginColumn, id.image.length());
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TK_inc:{
      jj_consume_token(TK_inc);
      break;
      }
    case TK_dec:{
      jj_consume_token(TK_dec);
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}
